# tindermate

./: .gitignore  LICENSE.md  Makefile  README.md  configuration.py  example.env  logger.py  main.py  pyproject.toml  utils.py
conversation/: agent.py  gpt.py  prompts.py
tests/: test_filecache.py
tinder/: client.py  exception.py  schemas.py  utils.py
tindermate/: configuration.py  filecache.py  type_aliases.py  utils.py
tindermate/conversation/: agent.py  gpt.py  prompts.py
tindermate/conversation/templates/: first_message.txt  message_reply.txt
tindermate/tinder/: client.py  exception.py  schemas.py
tindermate/ui/: app.py  context.py  tokens.py  utils.py
tindermate/ui/components/: body.py  generic.py  sidebar.py  tinder_match.py
ui/: app.py  context.py  tokens.py  utils.py
ui/components/: body.py  generic.py  sidebar.py  tinder_match.py
ui/static/: styles.css
